ADD GD Hooks command, DB more robust, modify the clan tag and rank system to be compliant with GD